--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ override.tf.json
 *_override.tf.json
 *.tfvars
 *old*
+*.txt
 # Include override files you do wish to add to version control using negated pattern
 #
 # !example_override.tf
