--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,8 @@ override.tf
 override.tf.json
 *_override.tf
 *_override.tf.json
-*.tfvars
+*.tfvars*
+.terraform*
 *old*
 *.txt
 # Include override files you do wish to add to version control using negated pattern
